# HRI_HandGesturingRecognition-Version2-

./: catch_video.py  demo.py  demo1.py  demo2.py  hand_csv.csv  hand_data.csv  human.csv  ori  robot.csv
action/: train.py
cam_data/: cam.json  datasetCam.txt  myCam.json
config/: action_gesture.yaml  hand_gesture.yaml
cvpack/torch_modeling/engine/: checkpoint.py  engine.py
dataset/: ImageAugmentation.py  base_dataset.py  data_settings.py  p2p_dataset.py  representation.py
exps/refinenet_root2/: config.py  test.py  train.py
exps/stage3_root2/: config.py  test.py  test.sh  test_util.py  train.py  train.sh
extensions/: association.cpp  setup.py
extensions/dapalib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
extensions/dapalib_light.egg-info/: PKG-INFO  SOURCES.txt
lib/CPPlibs/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
lib/collect_action/: catch_video.py  collect.py  sample_frame.py  split_dataet.py  test.py
lib/collect_hand/: aug_hand.py  create_dataset.py  new_aug_hand.py
lib/preprocess/: create_annot.py  data_format.md  gen_CMU_anno.py  project.py
lib/utils/: camera_wrapper.py  dataloader.py  hand_skel_function.py  loss_h.py  one_euro_filter.py  pose.py  test_metric.py  tools.py  track_pose.py  visual.py
lib/visualize/: vis.py
model/action/: EARN.py  EARN_v2.py  EARN_v3.py  vsgcnn.py
model/hand/: hand_skel.py  inceptionv3.py  mynet.py  resnet.py  rexnetv1.py
model/main_model/: CA.py  PRM.py  conv.py  mode_1.py  model_tmp.py  new_model.py  residual.py  smap.py  top.py
(+9 files in other folders)
